# baf-wallet

./: .gitignore  API.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  log  transaction.drawio
.github/ISSUE_TEMPLATE/: scoping.md  tracking.md
src/: error.rs  keystore.rs  main.rs  near.rs  test_util.rs  util.rs  web2.rs
test_assets/: test_parse_credentials_0.testnet.json
tests/: test_system.rs
wallet/: Cargo.toml  Dockerfile
wallet/src/: error.rs  near.rs  test_util.rs  util.rs
