[package]
name = "baf-progressive-wallet"
version = "0.1.0"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.1", features = ["full"]}
http = { version = "0.2.2" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rocksdb = { version = "0.15" }
secrecy = { version = "0.7.0" }